--- a/conversion.ipynb
+++ b/conversion.ipynb
@@ -1,17 +1,5 @@
 {
  "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.0"
-  },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
@@ -24,7 +12,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,26 +27,28 @@
     "\n",
     "import argparse \n",
     "\n",
-    "import translate\n",
-    "import utils\n",
-    "\n",
-    "import difflib\n",
-    "from mo_future import string_types\n",
-    "from rapidfuzz import fuzz\n",
-    "from itertools import chain"
+    "import translate"
    ]
   },
   {
+   "source": [
+    "# First\n",
+    " Train data extract"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "TRAIN: 56355it [00:00, 61424.96it/s]\n",
-      "TRAIN.TABLES: 18585it [00:01, 15830.69it/s]\n"
+      "TRAIN: 56355it [00:00, 74822.06it/s]\n",
+      "TRAIN.TABLES: 18585it [00:01, 15524.41it/s]\n"
      ]
     }
    ],
@@ -71,80 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def upper_transform(sentence: str, word: str):\n",
-    "    sentence = sentence.replace(word, f'[\\{word.upper()}\\]')\n",
-    "    return sentence\n",
-    "\n",
-    "def search_table(table_list: list, table_id: str):\n",
-    "    for table in table_list:\n",
-    "        if table['id'] == table_id:\n",
-    "            return table\n",
-    "\n",
-    "def upper_transform_question(question: str, table_list, table_id):\n",
-    "    \"\"\"\n",
-    "    Transform part of the question into upper character to enhance the quality of translation\n",
-    "\n",
-    "    Argument\n",
-    "    --------\n",
-    "    question: str, question for database\n",
-    "    table_list: list, list of dictionary of tables\n",
-    "    table_id: str, id for target table\n",
-    "    \"\"\"\n",
-    "    question = question.lower()\n",
-    "    target_table = search_table(table_list, table_id)\n",
-    "\n",
-    "    header = target_table['header']\n",
-    "    rows = list(chain(*target_table['rows']))\n",
-    "    rows.extend(header)\n",
-    "\n",
-    "    # find link btw question and values\n",
-    "    matches = get_matched_entries(question, rows)\n",
-    "    # if match exists, transform the matches to UPPER\n",
-    "    if matches != None:\n",
-    "        matches = [m[0].lower() for m in matches]\n",
-    "\n",
-    "        for match in matches:\n",
-    "            if match in question:\n",
-    "                question = upper_transform(question, match)\n",
-    "        return question\n",
-    "    else:\n",
-    "        return question  \n",
-    "\n",
-    "def upper_transform_bulk(questions, table_list, table_ids):\n",
-    "    upper_questions = []\n",
-    "    for question, table_id in tqdm(zip(questions, table_ids), desc='Converting questions to upper letter', total=len(questions)):\n",
-    "        upper_q = upper_transform_question(question, table_list, table_id)\n",
-    "        upper_questions.append(upper_q)\n",
-    "    return upper_questions\n",
-    "\n",
-    "def extract_question(name: str, data: list, savedir: str): \n",
-    "    \"\"\"\n",
-    "    Extract question from data and save to excel file\n",
-    "\n",
-    "    Argument\n",
-    "    --------\n",
-    "    name: str, dataset name ['train','dev','test']\n",
-    "    data: list, data list \n",
-    "    savedir: str, directory to save file\n",
-    "    \"\"\"\n",
-    "    # define path to save file\n",
-    "    filepath = os.path.join(args.savedir,f'{name}_question.xlsx')\n",
-    "\n",
-    "    # remove '\\xa0'\n",
-    "    question = [\" \".join(d['question'].split()) for d in data]\n",
-    "    table_id=[d['table_id'] for d in data]\n",
-    "\n",
-    "    # save question dataframe \n",
-    "    question_df = pd.DataFrame({'question':question, 'table_id':table_id})\n",
-    "    question_df.to_excel(filepath,index=False)"
-   ]
-  },
-  {
    "source": [
     "utb = upper_transform_bulk(questions, tables, table_ids)"
    ],
@@ -152,20 +68,20 @@
    "metadata": {
     "tags": []
    },
-   "execution_count": 42,
+   "execution_count": 7,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "Converting questions to upper letter: 100%|██████████| 56355/56355 [07:58<00:00, 117.75it/s]\n"
+      "Converting questions to upper letter: 100%|██████████| 56355/56355 [07:48<00:00, 120.30it/s]\n"
      ]
     }
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,6 +101,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'filepath' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-24029c47fd57>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'filepath' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = 'ko_data/ko_train.jsonl'\n",
+    "file = open(filepath, 'r').readlines()\n",
+    "# with open(filepath, 'w', encoding='utf-8') as f:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'{\"phase\": 1, \"table_id\": \"1-1000181-1\", \"question\": \"South Australia 의 Notes 가 무엇인지 알려주세요.\", \"sql\": {\"sel\": 5, \"conds\": [[3, 0, \"SOUTH AUSTRALIA\"]], \"agg\": 0}}\\n'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 18
+    }
+   ],
+   "source": [
+    "file[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [],
@@ -194,24 +160,6 @@
     "lines = [line.replace('\\n', '').strip()  for line in lines]\n",
     "\n",
     "lines = [' '.join(line.split()) for line in lines]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "TRAIN: 56355it [00:01, 52703.27it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "data = translate.extract_data('train', './data')\n",
-    "translate.extract_question('train', data, '')"
    ]
   },
   {
@@ -710,6 +658,48 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting soynlp\n",
+      "  Downloading soynlp-0.0.493-py3-none-any.whl (416 kB)\n",
+      "\u001b[K     |████████████████████████████████| 416 kB 1.8 MB/s \n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.12.1 in /usr/local/lib/python3.6/dist-packages (from soynlp) (1.19.2)\n",
+      "Requirement already satisfied: psutil>=5.0.1 in /home/hoonst/.local/lib/python3.6/site-packages (from soynlp) (5.8.0)\n",
+      "Requirement already satisfied: scipy>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from soynlp) (1.5.4)\n",
+      "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from soynlp) (0.23.2)\n",
+      "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->soynlp) (1.0.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->soynlp) (2.1.0)\n",
+      "Installing collected packages: soynlp\n",
+      "Successfully installed soynlp-0.0.493\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install soynlp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
