--- a/TabularSemanticParsing/Tokenizer Comparison.ipynb
+++ b/TabularSemanticParsing/Tokenizer Comparison.ipynb
@@ -39,6 +39,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['data', 'multi_wikisql1.1', '']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'data/multi_wikisql1.1/'.split('/')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -757,6 +777,23 @@
     "print(model.embeddings.word_embeddings.weight[-1, :])\n",
     "# outputs a vector of zeros of shape [768]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('shame.txt', 'w') as pf:\n",
+    "    pf.write('a \\n b \\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
