--- a/TabularSemanticParsing/Tokenizer Comparison.ipynb
+++ b/TabularSemanticParsing/Tokenizer Comparison.ipynb
@@ -67,6 +67,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('./data/demo_data/wikisql.bridge.question-split.ppl-0.85.2.dn.no_from.bert.multilingual.demo_data.pkl', 'rb') as dp:\n",
+    "    demo_pickle = pickle.load(dp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_pickle['test'][10].db_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('./data/ko_token/wikisql.bridge.question-split.ppl-0.85.2.dn.no_from.bert.multilingual.ko_token.pkl', 'rb') as dp:\n",
+    "    _pickle = pickle.load(dp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21301"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_pickle['test'][0].db_id"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
