--- a/SQLova/notebook/SPARTA.ipynb
+++ b/SQLova/notebook/SPARTA.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "excessive-sierra",
    "metadata": {
     "ExecuteTime": {
@@ -55,6 +55,7 @@
     "                  get_data, get_models, get_wemb_bert, \\\n",
     "                  sort_and_generate_pr_w, generate_sql_q, \\\n",
     "                  tokenize_corenlp_direct_version\n",
+    "\n",
     "from sqlova.utils.utils_wikisql import *\n",
     "from sqlova.utils.utils import topk_multi_dim\n",
     "from sqlnet.dbengine import DBEngine\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "ethical-europe",
    "metadata": {
     "ExecuteTime": {
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "little-victory",
    "metadata": {
     "ExecuteTime": {
@@ -136,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "bright-firewall",
    "metadata": {
     "ExecuteTime": {
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "mediterranean-florist",
    "metadata": {
     "ExecuteTime": {
@@ -161,7 +162,22 @@
      "start_time": "2021-05-27T12:39:52.588418Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../data/ko_from_table/train_tok.jsonl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-ad4fd351431b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_table\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_loader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatadir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# To start from the pre-trained models, un-comment following lines.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpath_model_bert\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'model_bert_best.pt'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/repo/SPARTA/SQLova/train.py\u001b[0m in \u001b[0;36mget_data\u001b[0;34m(path_wikisql, args)\u001b[0m\n\u001b[1;32m    178\u001b[0m                                                                                              \u001b[0margs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoy_size\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m                                                                                              \u001b[0mno_w2i\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m                                                                                              no_hs_tok=True)\n\u001b[0m\u001b[1;32m    181\u001b[0m     train_loader, dev_loader, test_loader = get_loader_wikisql(train_data, \n\u001b[1;32m    182\u001b[0m                                                                \u001b[0mdev_data\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/repo/SPARTA/SQLova/sqlova/utils/utils_wikisql.py\u001b[0m in \u001b[0;36mload_wikisql\u001b[0;34m(path_wikisql, toy_model, toy_size, no_tok, bert, no_w2i, no_hs_tok, aug)\u001b[0m\n\u001b[1;32m     87\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_wikisql\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_wikisql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_w2i\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_hs_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;31m# Get data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 89\u001b[0;31m     \u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_wikisql_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_wikisql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'train'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_tok\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_hs_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_hs_tok\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maug\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     90\u001b[0m     \u001b[0mdev_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdev_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_wikisql_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_wikisql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'dev'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_tok\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_hs_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_hs_tok\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     91\u001b[0m     \u001b[0mtest_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_wikisql_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_wikisql\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'test'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_model\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoy_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtoy_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_tok\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mno_hs_tok\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mno_hs_tok\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/repo/SPARTA/SQLova/sqlova/utils/utils_wikisql.py\u001b[0m in \u001b[0;36mload_wikisql_data\u001b[0;34m(path_wikisql, mode, toy_model, toy_size, no_tok, no_hs_tok, aug)\u001b[0m\n\u001b[1;32m    121\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_sql\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtoy_model\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0mtoy_size\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../data/ko_from_table/train_tok.jsonl'"
+     ]
+    }
+   ],
    "source": [
     "_, _, _, _, test_data, test_table, _, _, test_loader = get_data(args.datadir, args)\n",
     "\n",
@@ -177,21 +193,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "elementary-minneapolis",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-27T12:40:04.568170Z",
-     "start_time": "2021-05-27T12:40:04.546083Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "engine = DBEngine(os.path.join(args.datadir, 'test.db'))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "opponent-remove",
    "metadata": {},
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "racial-specialist",
    "metadata": {
     "ExecuteTime": {
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "id": "female-robinson",
    "metadata": {
     "ExecuteTime": {
@@ -305,7 +306,19 @@
      "start_time": "2021-05-27T13:03:54.244974Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-3e72dd271f5d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mmin\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0mmax\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mdescription\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'INDEX:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_data' is not defined"
+     ]
+    }
+   ],
    "source": [
     "index_text = ipywidgets.BoundedIntText(\n",
     "    value=0,\n",
@@ -319,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "id": "designed-illustration",
    "metadata": {
     "ExecuteTime": {
@@ -330,18 +343,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f556aa89806544688417496666d068f5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(BoundedIntText(value=0, description='INDEX:', max=15878), Output()), _dom_classes=('widg…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'index_text' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-94c43a1e26cd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mipywidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteractive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprint_table_label\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mindex_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'index_text' is not defined"
+     ]
     }
    ],
    "source": [
@@ -382,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
