--- a/serving/SPARTA-Copy1.ipynb
+++ b/serving/SPARTA-Copy1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "excessive-sierra",
    "metadata": {
     "ExecuteTime": {
@@ -49,13 +49,23 @@
     "\n",
     "import os \n",
     "import sys\n",
-    "sys.path.extend(['../SQLova','../TabularSemanticParsing'])\n",
-    "\n"
+    "sys.path.append('../TabularSemanticParsing')\n",
+    "# sys.path.extend(['../SQLova','../TabularSemanticParsing'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
+   "id": "2a6966c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys.path.insert(0, '../TabularSemanticParsing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "boolean-response",
    "metadata": {
     "ExecuteTime": {
@@ -65,19 +75,19 @@
    },
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-524bc582b2d1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Bridge Model Define\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msemantic_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn_framework\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mEncoderDecoderLFramework\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msemantic_parser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mensemble_configs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmodel_dirs\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mensemble_model_dirs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwikisql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdbengine\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDBEngine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/data/SPARTA/TabularSemanticParsing/src/semantic_parser/learn_framework.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmoz_sp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn_framework\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mLFramework\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn_modules\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMaskedCrossEntropyLoss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mops\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mops\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/data/SPARTA/TabularSemanticParsing/src/common/learn_framework.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_processor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_wandb_group\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_wandb_tag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_no_join_tag\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_processor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenizers\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtok\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval_tools\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0meval_tools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0meval_utils\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwikisql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdbengine\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDBEngine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/data/SPARTA/TabularSemanticParsing/src/eval/eval_tools.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_processor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvectorizers\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval_utils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspider\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mspider_eval_tools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwikisql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdbengine\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDBEngine\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwikisql\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwikisql_eval_tools\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/data/SPARTA/TabularSemanticParsing/src/eval/spider/evaluate.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0margparse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0meval\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mspider\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprocess_sql\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtokenize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_schema\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_tables_with_alias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_table_recur\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSchema\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mget_sql\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/data/SPARTA/TabularSemanticParsing/src/eval/spider/process_sql.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnltk\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mword_tokenize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0mCLAUSE_KEYWORDS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'select'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'from'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'where'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'group'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'order'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'limit'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'intersect'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'union'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'except'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* text vocab size = 119547\n",
+      "* program vocab size = 99\n",
+      "\n",
+      "pretrained_transformer = bert-base-multilingual-cased\n",
+      "fix_pretrained_transformer_parameters = False\n",
+      "\n",
+      "share_vocab is False\n",
+      "bridge module created\n",
+      "=> loading checkpoint '../TabularSemanticParsing/model/wikisql.bridge.lstm.meta.ts.ko_from_table.bs_8.ppl-0.85.2.dn.no_from.feat.bert-base-multilingual-cased.xavier-768-512-512-8-3-0.0003-inv-sqr-0.0003-3000-5e-05-inv-sqr-0.0-3000-0.3-0.3-0.0-0.0-1-8-0.1-0.0-res-0.2-0.0-ff-0.4-0.0.test/model-best.8.tar'\n",
+      "loading preprocessed data: ../TabularSemanticParsing/data/ko_from_table/wikisql.bridge.question-split.ppl-0.85.2.dn.no_from.bert.multilingual.TabularSemanticParsing.pkl\n"
      ]
     }
    ],
@@ -93,7 +103,7 @@
     "from src.data_processor.vocab_processor import build_vocab\n",
     "from src.data_processor.data_processor import preprocess\n",
     "from src.data_processor.processors.data_processor_wikisql import generate_sql_q, generate_sql_q1\n",
-    "\n",
+    " \n",
     "import src.utils.utils as utils\n",
     "import src.eval.eval_tools as eval_tools\n",
     "\n",
@@ -104,11 +114,12 @@
     "\n",
     "import ast\n",
     "\n",
-    "parser = argparser.ArgumentParser()\n",
-    "args_bridge = parser.parse_args_bridge(args_bridge=[])\n",
+    "# parser = argparse.ArgumentParser()\n",
+    "# args_bridge = parser.parse_args(args=[])\n",
+    "from src.parse_args import args as args_bridge\n",
     "\n",
-    "args_bridge.data_dir=\"data/ko_token\"\n",
-    "args_bridge.db_dir=\"data/ko_token\"\n",
+    "args_bridge.data_dir=\"../TabularSemanticParsing/data/ko_from_table\"\n",
+    "args_bridge.db_dir=\"../TabularSemanticParsing/data/ko_from_table\"\n",
     "args_bridge.dataset_name=\"wikisql\"\n",
     "args_bridge.model=\"bridge\"\n",
     "args_bridge.model_id = 2\n",
@@ -118,7 +129,6 @@
     "args_bridge.normalize_variables=False\n",
     "args_bridge.denormalize_sql=True\n",
     "args_bridge.omit_from_clause=True\n",
-    "args_bridge.no_join_condition=False\n",
     "args_bridge.table_shuffling=True\n",
     "args_bridge.use_graph_encoding=False\n",
     "args_bridge.use_typed_field_markers=False\n",
@@ -185,7 +195,7 @@
     "args_bridge.bs_alpha=1.0\n",
     "args_bridge.data_parallel=False\n",
     "\n",
-    "args_bridge.model_dir = './model/wikisql.bridge.lstm.meta.ts.ko_token.bs_8.ppl-0.85.2.dn.no_from.feat.bert-base-multilingual-cased.xavier-768-512-512-8-3-0.0003-inv-sqr-0.0003-3000-5e-05-inv-sqr-0.0-3000-0.3-0.3-0.0-0.0-1-8-0.1-0.0-res-0.2-0.0-ff-0.4-0.0.test'\n",
+    "args_bridge.model_dir = '../TabularSemanticParsing/model/wikisql.bridge.lstm.meta.ts.ko_from_table.bs_8.ppl-0.85.2.dn.no_from.feat.bert-base-multilingual-cased.xavier-768-512-512-8-3-0.0003-inv-sqr-0.0003-3000-5e-05-inv-sqr-0.0-3000-0.3-0.3-0.0-0.0-1-8-0.1-0.0-res-0.2-0.0-ff-0.4-0.0.test'\n",
     "\n",
     "sp = EncoderDecoderLFramework(args_bridge).cuda()\n",
     "\n",
@@ -194,21 +204,13 @@
     "\n",
     "dataset = data_loader.load_processed_data(args_bridge)\n",
     "\n",
-    "# split = 'test'\n",
-    "# if args.dataset_name == 'wikisql':\n",
-    "#     engine_path = os.path.join(args.data_dir, '{}.db'.format(split))\n",
-    "#     engine = DBEngine(engine_path)\n",
-    "# else:\n",
-    "#     engine = None"
+    "split = 'test'\n",
+    "if args_bridge.dataset_name == 'wikisql':\n",
+    "    engine_path = os.path.join(args_bridge.data_dir, '{}.db'.format(split))\n",
+    "    engine = DBEngine(engine_path)\n",
+    "else:\n",
+    "    engine = None"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe5086d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -220,27 +222,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "id": "provincial-portugal",
    "metadata": {},
    "outputs": [],
    "source": [
-    "question_idx = 101"
+    "question_idx = 205"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "id": "responsible-diversity",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'초안에 LB이있는 college는 무엇입니까?'"
+       "'얼마나 많은 팀을 뛰었는지 week 6'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "flying-mistress",
    "metadata": {},
    "outputs": [
@@ -265,17 +267,17 @@
    ],
    "source": [
     "# Question with question_idx\n",
-    "question = '초안에 LB college가 뭐냐?'\n",
-    "dataset['test'][question_idx].text = question\n",
+    "question = 'week 6에 얼마나 많은 팀이 뛰었을까?'\n",
+    "dataset[split][question_idx].text = question\n",
     "\n",
-    "# examples = dataset[split][question_idx:question_idx+1]\n",
-    "examples = [question]\n",
+    "examples = dataset[split][question_idx:question_idx+1]\n",
+    "# examples = [question]\n",
     "sp.schema_graphs = dataset['schema']\n",
     "\n",
     "table_id = examples[0].db_name\n",
     "\n",
     "# define all tables\n",
-    "with open('./data/ko_from_table/test.tables.jsonl', 'r') as json_file:\n",
+    "with open('../TabularSemanticParsing/data/ko_from_table/test.tables.jsonl', 'r') as json_file:\n",
     "    tables = list(json_file)\n",
     "    \n",
     "for i, table in enumerate(tables):\n",
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "logical-condition",
    "metadata": {},
    "outputs": [
@@ -294,21 +296,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  3.88it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 1/1 [00:00<00:00,  3.61it/s]\n"
      ]
     }
    ],
@@ -316,15 +304,15 @@
     "pred_restored_cache = sp.load_pred_restored_cache()\n",
     "pred_restored_cache_size = sum(len(v) for v in pred_restored_cache.values())\n",
     "\n",
-    "out_dict = sp.inference(examples, restore_clause_order=args.process_sql_in_execution_order,\n",
+    "out_dict = sp.inference(examples, restore_clause_order=args_bridge.process_sql_in_execution_order,\n",
     "                        pred_restored_cache=pred_restored_cache,\n",
-    "                        check_schema_consistency_=args.sql_consistency_check,\n",
+    "                        check_schema_consistency_=args_bridge.sql_consistency_check,\n",
     "                        engine=engine, inline_eval=True, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "id": "located-crowd",
    "metadata": {},
    "outputs": [],
@@ -335,17 +323,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 62,
    "id": "crazy-potential",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['SELECT (College) FROM 1-10812403-4 WHERE Position = LB']"
+       "['SELECT count(Opponent) FROM 1-11391448-2 WHERE Week = 6']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,17 +344,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 63,
    "id": "beginning-hacker",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['laval']"
+       "[1]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
